--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,8 @@ on:
   push:
     tags:
       - 'v*'   # Only runs on version tags like v0.1.0
-
+    branches:
+      - main   # Only runs on the main branch
 jobs:
   build-and-publish:
     runs-on: ubuntu-latest
