--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,10 +2,10 @@ name: Publish Python 🐍 distribution 📦 to PyPI
 
 on:
   push:
+    branches:
+      - main
     tags:
       - 'v*'   # Only runs on version tags like v0.1.0
-    branches:
-      - main   # Only runs on the main branch
 jobs:
   build-and-publish:
     runs-on: ubuntu-latest
