--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,13 +1,15 @@
-name: Publish Python 🐍 distribution 📦 to PyPI
+name: Publish Python 🐍 package to PyPI
 
 on:
   push:
     branches:
       - main
     tags:
-      - 'v*'   # Only runs on version tags like v0.1.0
+      - 'v*'  # Only tags starting with v (e.g., v0.1.0, v1.0.0)
+
 jobs:
   build-and-publish:
+    if: startsWith(github.ref, 'refs/tags/v') && github.ref_protected == true && github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -17,9 +19,8 @@ jobs:
         with:
           python-version: '3.11'
 
-      - name: Install build and twine
-        run: |
-          pip install --upgrade build twine
+      - name: Install build tools
+        run: pip install --upgrade build twine
 
       - name: Build package
         run: python -m build
