--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ typer[all]>=0.9.0
 langchain>=0.1.0
 langgraph>=0.0.20
 langchain-community>=0.0.10
+langchain-ollama>=0.1.0
 pyyaml>=6.0
 httpx>=0.24.0
 rich>=13.0.0
