Add plan executor functionality and enhance agent capabilities
- Introduced PlanExecutor class for executing file operations and bash commands.
- Updated LocopilotAgent to utilize PlanExecutor for task execution.
- Enhanced input parsing to support multiple action types (create, edit, delete, run).
- Added error handling and rollback functionality for executed actions.
- Removed requirements.txt as dependencies are now managed differently.
- Updated .gitignore to include development files and package management.
- Incremented version to 0.1.8.
- Added comprehensive tests for PlanExecutor functionality.

--- a/.gitignore
+++ b/.gitignore
@@ -72,6 +72,14 @@ Thumbs.db
 .locopilot/
 *.log
 
+# Development files
+demo_*.py
+example_*.py
+test_*.py.backup
+
+# Package management
+requirements.txt
+
 # Jupyter Notebook
 .ipynb_checkpoints
 
