--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,14 +51,14 @@ Repository = "https://github.com/Ripan-Roy/locopilot-ai.git"
 Issues = "https://github.com/Ripan-Roy/locopilot-ai/issues"
 
 [project.scripts]
-locopilot = "cli:app"
+locopilot = "locopilot.cli.app:app"
 
 [build-system]
 requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools]
-py-modules = ["cli", "agent", "memory", "utils", "connection", "plan_executor"]
+packages = {find = {where = ["."], include = ["locopilot*"]}}
 
 [tool.black]
 line-length = 88
